--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,15 @@ __pycache__/
 *.sublime-workspace
 
 static/
+!posts/static/author_photo.jpg
 posts/static/
 media/
 
 db.sqlite3
+
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+/htmlcov/
