--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,13 @@ sqlparse==0.3.0           # via django
 urllib3==1.25.6           # via requests
 wcwidth==0.1.8            # via pytest
 zipp==2.2.0               # via importlib-metadata
+
+colorama~=0.4.4
+cffi~=1.14.5
+pip~=21.1.2
+cryptography~=3.4.7
+image~=1.5.33
+Jinja2~=3.0.1
+atomicwrites~=1.4.0
+setuptools~=49.2.1
+django-debug-toolbar~=2.2
